src/App.css
.app-header {
  display: grid;
  grid-template-columns: 1fr 40px;
  padding: 10px;
  position: sticky; top: 0;
  background-color: #fff;
  z-index: 999;
}

.app-header-title {
  font-family: 'Pacifico', cursive;
  font-size: 1.7rem;
}

.app-header-button button svg {
  width: 1.3em;
  height: 1.3em;
}

.post {
  background-color: #fff;
}

.post-header-grid {
  display: grid;
  grid-template-columns: 64px 1fr;
  padding: 15px;
}

.profile-pic {
  width: 50px;
  height: 50px;
  border-radius: 50%;
}

.post-username {
  font-weight: 600;
  display: inline;
  margin-right: 5px;
}

.post-image {
  width: 100%;
  height: auto;
}

.post-caption-items {
 padding: 0px 8px 8px 8px; 
}

.post-buttons button svg {
  width: 1.6em !important;
  height: 1.6em !important;
}

.post-comments {
  color: grey;
}

.post-date {
  color: grey;
  font-size: 0.8rem;
}

.post-liked {
  color: #e90000 !important;
}

.profile-info {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  margin-top: 10px;
}

.profile-heading {
  text-align: center;
}

.profile-posts {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-top: 20px;
}

.profile-post {
  /* Since the grid has 3 columns, we make the images square by doing this */
  height: calc(100vw / 3);
}

.profile-post img {
  width: 100%;
  height: 100%;
}

